Change name and add tailwind
Change name of the component to more suitable and add tailwind to improve DX making this app

--- a/apps/client-web-app/src/app/app.component.html
+++ b/apps/client-web-app/src/app/app.component.html
@@ -1,2 +1,1 @@
-<e-commerce-client-web-app-browse-feature></e-commerce-client-web-app-browse-feature>
-<e-commerce-nx-welcome></e-commerce-nx-welcome> <router-outlet></router-outlet>
+<router-outlet></router-outlet>
