Change domain name and style cards
Change domain name from browse to browsing to be more suitable to domain naming. Add Style cards to improve UI

--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -3,3 +3,22 @@
 @tailwind utilities;
 
 /* You can add global styles to this file, and also import other style files */
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  overflow-x: hidden;
+  min-height: 100svh;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  padding: 0 1rem;
+}
