--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -19,6 +19,6 @@ body {
   overflow-x: hidden;
   min-height: 100svh;
   width: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   padding: 0 1rem;
 }
