Improve button styling
Add more avaible types and add size input

--- a/libs/client-web-app/browsing/feature-products/src/lib/products/products.component.html
+++ b/libs/client-web-app/browsing/feature-products/src/lib/products/products.component.html
@@ -20,8 +20,8 @@
         <e-commerce-button
           name="Add to cart"
           iconName="add_shopping_cart"
-          color="accent"
-          (clickEvent)="onAddToCart($event)"
+          type="accent"
+          (clickEvent)="onAddToCart()"
         ></e-commerce-button>
       </div>
     </div>
