--- a/libs/client-web-app/browsing/feature-products/src/lib/products/products.component.html
+++ b/libs/client-web-app/browsing/feature-products/src/lib/products/products.component.html
@@ -2,7 +2,7 @@
 <div class="grid gap-6 grid-cols-[repeat(auto-fit,minmax(20rem,1fr))]">
   <a
     [routerLink]="['/product/details/', product.id]"
-    class="flex flex-col rounded-lg shadow-default hover:scale-105 transition-transform"
+    class="flex flex-col rounded-lg hover:shadow-[0.5rem_0.5rem_0.5rem_0.5rem_rgba(0,0,0,0.7)] transition-shadow"
     *ngFor="let product of products$ | async"
   >
     <img
@@ -23,6 +23,16 @@
           type="accent"
           (clickEvent)="onAddToCart()"
         ></e-commerce-button>
+        <button
+          mat-fab
+          extended
+          type="button"
+          class="py-1 px-4 !bg-blue-500 !text-white border-2 border-black hover:bg-blue-400"
+          (click)="onAddToCart($event)"
+        >
+          <mat-icon>add_shopping_cart</mat-icon>
+          Add to cart
+        </button>
       </div>
     </div>
   </a>
