Create layout component and make minor changes
Create layout and navbar component to be able add core components to all pages. Add eCommerceButton directive to products. Add styles to body in index.html

--- a/libs/client-web-app/browsing/feature-products/src/lib/products/products.component.html
+++ b/libs/client-web-app/browsing/feature-products/src/lib/products/products.component.html
@@ -17,12 +17,12 @@
       </div>
       <div class="flex justify-between items-center mt-3">
         <span class="text-xl">{{ product.price }}$</span>
-        <e-commerce-button
+        <e-commerce-icon-button
           name="Add to cart"
           iconName="add_shopping_cart"
           type="accent"
           (clickEvent)="onAddToCart()"
-        ></e-commerce-button>
+        ></e-commerce-icon-button>
       </div>
     </div>
   </a>
