--- a/libs/client-web-app/browsing/feature-products/src/lib/products/products.component.html
+++ b/libs/client-web-app/browsing/feature-products/src/lib/products/products.component.html
@@ -2,28 +2,29 @@
 <div class="grid gap-6 grid-cols-[repeat(auto-fit,minmax(20rem,1fr))]">
   <a
     [routerLink]="['/product/details/', product.id]"
-    class="flex flex-col rounded-lg hover:shadow-[0.5rem_0.5rem_0.5rem_0.5rem_rgba(0,0,0,0.7)] transition-shadow"
+    class="flex flex-col rounded-3xl bg-background-800 text-foreground-0 hover:bg-blue-300 transition-colors"
     *ngFor="let product of products$ | async"
   >
-    <img
-      [src]="getImage(product.image)"
-      [alt]="product.name"
-      class="w-full rounded-lg"
-    />
     <div class="p-4 flex flex-col justify-between h-full">
-      <div class="flex flex-col mt-3">
-        <h3 class="text-2xl font-bold">{{ product.name }}</h3>
-        <p>{{ product.description }}</p>
+      <img
+        [src]="getImage(product.image)"
+        [alt]="product.name"
+        class="w-full rounded-3xl"
+      />
+      <div class="flex flex-col mt-5 gap-5">
+        <h3 class="text-3xl font-bold">{{ product.name }}</h3>
+        <p class="text-lg">{{ product.description }}</p>
       </div>
-      <div class="flex justify-between items-center mt-3">
+      <div class="flex justify-between items-center mt-8">
         <span class="text-xl">{{ product.price }}$</span>
         <e-commerce-icon-button
           name="Add to cart"
           iconName="add_shopping_cart"
-          type="accent"
+          brand="primary"
           (clickEvent)="onAddToCart()"
         ></e-commerce-icon-button>
       </div>
     </div>
   </a>
 </div>
+<!-- hover:shadow-[0.5rem_0.5rem_0.5rem_0.5rem_rgba(0,0,0,0.7)] transition-shadow -->
