Install primeflex instead of tailwind

--- a/apps/client-web-app/src/app/app.component.html
+++ b/apps/client-web-app/src/app/app.component.html
@@ -1,2 +1,3 @@
 <p-button>Click!</p-button>
-<e-commerce-layout></e-commerce-layout>
+<!-- <e-commerce-layout></e-commerce-layout> -->
+<div class="bg-primary p-3"></div>
