--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -1,9 +1,6 @@
-@tailwind components;
-@tailwind utilities;
-@tailwind base;
-
 @import 'primeng/resources/themes/viva-dark/theme.css';
 @import 'primeng/resources/primeng.css';
+@import 'primeflex/primeflex.css';
 
 *,
 *::after,
