--- a/apps/client-web-app/src/app/app.component.html
+++ b/apps/client-web-app/src/app/app.component.html
@@ -1,3 +1,1 @@
-<p-button>Click!</p-button>
-<!-- <e-commerce-layout></e-commerce-layout> -->
-<div class="bg-primary p-3"></div>
+<e-commerce-layout></e-commerce-layout>
