--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -1,6 +1,7 @@
 @import 'primeng/resources/themes/viva-dark/theme.css';
 @import 'primeng/resources/primeng.css';
 @import 'primeflex/primeflex.css';
+@import 'primeicons/primeicons.css';
 
 *,
 *::after,
