--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -1,16 +1,33 @@
-@import 'primeng/resources/themes/viva-dark/theme.css';
+@import 'primeng/resources/themes/md-dark-indigo/theme.css';
 @import 'primeng/resources/primeng.css';
 @import 'primeflex/primeflex.css';
 @import 'primeicons/primeicons.css';
 
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-  // margin: 0;
-  // padding: 0;
+:root {
+  --border-radius: 2rem;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+input {
+  border-radius: var(--border-radius);
+}
+
+.p-password {
+  width: 100%;
+}
+
+button {
+  border-radius: var(--border-radius);
+}
+
+p-button.w-full .p-button {
+  width: 100% !important;
 }
