--- a/apps/client-web-app/src/app/nav/navbar.component.html
+++ b/apps/client-web-app/src/app/nav/navbar.component.html
@@ -1,52 +1,46 @@
-<div class="shadow-5">
-  <nav
-    class="flex align-items-center justify-content-between py-4 mx-4 lg:mx-36"
-  >
+<div class="shadow-5 surface-card">
+  <nav class="flex align-items-center justify-content-between md:py-1 mx-4">
     <div class="flex align-items-center gap-4 xl:gap-8">
       <h1 class="text-xl md:text-2xl lg:text-[2rem]">
         <span class="font-bold text-primary">Story</span
         ><span class="uppercase">Stash</span>
       </h1>
-      <div class="hidden items-center gap-4 xl:gap-8 lg:flex">
-        <p-divider layout="vertical"></p-divider>
-        <ul class="flex items-center gap-4 list-none">
-          <li>
-            <a
-              [routerLink]="'/'"
-              routerLinkActive="underline"
-              [routerLinkActiveOptions]="{ exact: true }"
-              eCommerceButton
-              brand="basic"
-              class="text-xl text-white capitalize"
-              >home</a
-            >
-          </li>
-          <li>
-            <a
-              [routerLink]="'/products'"
-              routerLinkActive="underline"
-              [routerLinkActiveOptions]="{ exact: true }"
-              eCommerceButton
-              brand="basic"
-              class="text-xl text-white capitalize"
-              >products</a
-            >
-          </li>
-        </ul>
-      </div>
+      <p-divider layout="vertical"></p-divider>
+      <ul
+        class="align-items-center justify-content-center gap-4 list-none m-0 p-0 hidden lg:flex"
+      >
+        <li>
+          <a
+            [routerLink]="'/'"
+            routerLinkActive="underline"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="text-xl text-white capitalize no-underline py-1 px-3"
+            >home</a
+          >
+        </li>
+        <li>
+          <a
+            [routerLink]="'/products'"
+            routerLinkActive="underline"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="text-xl text-white capitalize no-underline py-1 px-3"
+            >products</a
+          >
+        </li>
+      </ul>
     </div>
     <div class="flex items-center gap-1 md:gap-4">
       <p-button
         tabindex="-1"
         label="sign up"
-        [routerLink]="['/register']"
+        [routerLink]="['/auth', 'sign-up']"
+        class="hidden lg:block"
         styleClass="p-button-link"
       ></p-button>
       <p-button
-        class="hidden sm:block"
         tabindex="-1"
         label="login"
-        [routerLink]="['/login']"
+        [routerLink]="['/auth', 'sign-in']"
         styleClass="p-button-link"
       ></p-button>
       <p-button
