Add new variable and new css classes to support primeflex
Creat a header-height variable and add more css class to expand the primeflex classes

--- a/apps/client-web-app/src/app/nav/navbar.component.html
+++ b/apps/client-web-app/src/app/nav/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="shadow-5 surface-card">
+<div class="shadow-5 surface-card nav-height">
   <nav class="flex align-items-center justify-content-between md:py-1 mx-4">
     <div class="flex align-items-center gap-4 xl:gap-8">
       <h1 class="text-xl md:text-2xl lg:text-[2rem]">
