--- a/apps/client-web-app/src/styles.scss
+++ b/apps/client-web-app/src/styles.scss
@@ -33,3 +33,7 @@ button {
 p-button.w-full .p-button {
   width: 100% !important;
 }
+
+.p-inputtext:enabled:focus {
+  box-shadow: none !important;
+}
