--- a/libs/client-web-app/auth/feature-register/src/lib/feature-register/register-form/register-form.component.html
+++ b/libs/client-web-app/auth/feature-register/src/lib/feature-register/register-form/register-form.component.html
@@ -1,93 +1,94 @@
-<ng-container *ngIf="form$ | async as form">
-  <e-commerce-form-wrapper
-    [link]="{ url: '../sign-in', name: 'Log in' }"
-    title="Create a new account!"
-    text="Already a member?"
-    submitButtonLabel="Register"
-    [formState]="form"
-    (submitEvent)="onRegister(form.isInvalid, form.isPristine)"
-  >
-    <div class="flex flex-column w-full">
-      <div class="p-float-label">
-        <input
-          pInputText
-          id="email"
-          class="p-inputtext-sm"
-          autocomplete="off"
-          [ngClass]="{
-            'ng-invalid ng-dirty':
-              form.isSubmitted &&
-              (form.controls.email.isInvalid || !form.value.email?.length)
-          }"
-          [ngrxFormControlState]="form.controls.email"
-        />
-        <label for="email">Email </label>
-      </div>
+<e-commerce-form-wrapper
+  [link]="{ url: '../sign-in', name: 'Log in' }"
+  title="Create a new account!"
+  text="Already a member?"
+  submitButtonLabel="Register"
+  [formGroup]="registerForm"
+  (submitEvent)="onRegister()"
+>
+  <div class="flex flex-column w-full">
+    <div class="p-float-label">
+      <input
+        pInputText
+        id="email"
+        [class]="
+          registerForm.controls.email.invalid && submitted
+            ? 'ng-invalid ng-dirty'
+            : ''
+        "
+        autocomplete="off"
+        [formControl]="registerForm.controls.email"
+      />
+      <label for="email">Email</label>
+    </div>
+    <ng-container *ngIf="registerForm.controls.email.dirty || submitted">
       <small
         class="text-red-500 mt-1"
-        *ngIf="form.isSubmitted && !form.value.email?.length"
+        *ngIf="registerForm.controls.email.errors?.['required']"
         >This field is required</small
       >
       <small
         class="text-red-500 mt-1"
-        *ngIf="form.isSubmitted && form.controls.email.errors.email"
+        *ngIf="registerForm.controls.email.errors?.['email']"
         >Enter valid email</small
       >
+    </ng-container>
+  </div>
+  <div class="flex flex-column w-full">
+    <div class="p-float-label">
+      <p-password
+        id="password"
+        [class]="
+          passwordsControls.password.invalid && submitted
+            ? 'ng-invalid ng-dirty'
+            : ''
+        "
+        [feedback]="false"
+        [toggleMask]="true"
+        [formControl]="passwordsControls.password"
+      ></p-password>
+      <label for="password">Password</label>
     </div>
-    <div class="flex flex-column w-full">
-      <div class="p-float-label">
-        <p-password
-          [ngClass]="{
-            'ng-invalid ng-dirty':
-              form.isSubmitted &&
-              (form.controls.password.isInvalid || !form.value.password?.length)
-          }"
-          id="password"
-          class="p-inputtext-sm"
-          [feedback]="false"
-          [toggleMask]="true"
-          [ngrxFormControlState]="form.controls.password"
-        ></p-password>
-        <label for="password">Password</label>
-      </div>
+    <ng-container *ngIf="passwordsControls.password.dirty || submitted">
       <small
         class="text-red-500 mt-1"
-        *ngIf="form.isSubmitted && form.controls.password.errors.minLength"
+        *ngIf="passwordsControls.password.errors?.['minlength']"
         >Password should have at least 6 characters</small
       >
       <small
         class="text-red-500 mt-1"
-        *ngIf="form.isSubmitted && !form.value.password?.length"
+        *ngIf="passwordsControls.password.errors?.['required']"
         >This field is required</small
       >
+    </ng-container>
+  </div>
+  <div class="flex flex-column w-full">
+    <div class="p-float-label">
+      <p-password
+        id="confirm-password"
+        [class]="
+          passwordsControls.confirmPassword.invalid && submitted
+            ? 'ng-invalid ng-dirty'
+            : ''
+        "
+        [feedback]="false"
+        [toggleMask]="true"
+        [formControl]="passwordsControls.confirmPassword"
+      ></p-password>
+      <label for="confirm-password">Confirm password</label>
     </div>
-    <div class="flex flex-column w-full">
-      <div class="p-float-label">
-        <p-password
-          [ngClass]="{
-            'ng-invalid ng-dirty':
-              form.isSubmitted &&
-              (form.controls.confirmPassword.isInvalid ||
-                !form.value.confirmPassword?.length)
-          }"
-          id="confirm-password"
-          class="p-inputtext-sm"
-          [feedback]="false"
-          [toggleMask]="true"
-          [ngrxFormControlState]="form.controls.confirmPassword"
-        ></p-password>
-        <label for="confirm-password">Confirm password</label>
-      </div>
+    <ng-container *ngIf="passwordsControls.confirmPassword.dirty || submitted">
       <small
         class="text-red-500 mt-1"
-        *ngIf="form.isSubmitted && !form.value.confirmPassword?.length"
-        >This field is required</small
+        *ngIf="passwordsControls.confirmPassword.errors?.['required']"
       >
+        This field is required
+      </small>
       <small
         class="text-red-500 mt-1"
-        *ngIf="form.isSubmitted && form.controls.confirmPassword.errors.equalTo"
-        >Passwords are different</small
-      >
-    </div>
-  </e-commerce-form-wrapper>
-</ng-container>
+        *ngIf="registerForm.controls.passwords.errors?.['passwordMismatch']"
+        >Passwords are different
+      </small>
+    </ng-container>
+  </div>
+</e-commerce-form-wrapper>
