Change folder structure in auth libs
Adjust folder structure to fit to app concept.
Todo: finish auth process (improve ui, add redirect and clear inputs when its necessary)

--- a/libs/client-web-app/shell/ui/src/lib/nav/nav.component.html
+++ b/libs/client-web-app/shell/ui/src/lib/nav/nav.component.html
@@ -34,13 +34,13 @@
     <div class="flex align-items-center gap-3 md:gap-4">
       <a
         class="no-underline text-primary font-bold px-3 py-1"
-        routerLink="/auth/sign-up"
+        routerLink="/auth/register"
         routerLinkActive="underline"
         >Zarejestruj się</a
       >
       <a
         class="no-underline text-primary hidden font-bold px-3 py-1 lg:block"
-        routerLink="/auth/sign-in"
+        routerLink="/auth/login"
         >Zaloguj się</a
       >
       <p-button
